src/components/Confirm.module.css
@keyframes fade-in {
  from {
    opacity: 0.6;
    top: 54%;
  }
  to {
    opacity: 1;
    top: 50%;
  }
}

@keyframes sizeUp {
  from {
    width: 300px;
    height: 150px;
  }
  to {
    width: 1000px;
    height: 400px;
  }
}

@keyframes sizeDown {
  from {
    width: 900px;
    height: 300px;
  }
  to {
    width: 250px;
    height: 100px;
  }
}

.background {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 997;
  background-color: rgba(0, 0, 0, 0.4);
}

.contentBox {
  animation: fade-in 250ms ease-out;
  position: fixed;
  display: grid;
  top: 50%;
  left: 50%;
  padding: 16px;
  padding-top: 0;
  border: 1px solid var(--color-border);
  border-radius: 12px;
  background-color: var(--background-color);
  transform: translate(-50%, -50%);
  z-index: 999;
}

.content {
  width: 250px;
  height: 100px;
  margin-bottom: 10px;
  overflow: hidden;
}

.sizeUp {
  width: 1000px;
  height: 400px;
  animation: sizeUp 300ms ease;
}

.sizeDown {
  animation: sizeDown 300ms ease;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.title {
  margin-left: 16px;
  font-weight: var(--weight-bold);
  /* color: var(--color-light-blue); */
}

.btnContainer {
  display: flex;
  gap: 8px;
}

.btnContainer button {
  font-size: 16px;
}

.cancelBtn {
  flex: 1;
  height: 30px;
  text-align: center;
  border: 1px solid var(--color-light-blue);
  color: var(--color-light-blue);
  border-radius: 4px;
  cursor: pointer;
}

.confirmBtn {
  flex: 1;
  height: 30px;
  text-align: center;
  color: var(--background-color);
  background-color: var(--color-light-blue);
  border-radius: 4px;
  cursor: pointer;
  transition: all var(--animation-duration) ease;
}

.confirmBtn:hover {
  background-color: var(--color-blue);
}

.hide {
  display: none;
}

@media all and (min-width: 480px) and (max-width: 767px) {
}

/* 모바일 세로 (해상도 ~ 479px)*/
@media all and (max-width: 479px) {
  .content {
    width: 70vw;
    height: 12vh;
    margin-bottom: 2vh;
  }

  @keyframes sizeUp {
    from {
      width: 70vw;
      height: 20vh;
    }
    to {
      width: 80vw;
      height: 60vh;
    }
  }

  @keyframes sizeDown {
    from {
      width: 80vw;
      height: 50vh;
    }
    to {
      width: 70vw;
      height: 15vh;
    }
  }

  .sizeUp {
    width: 80vw;
    height: 60vh;
    animation: sizeUp 300ms ease;
  }

  .sizeDown {
    animation: sizeDown 300ms ease;
  }

  .contentBox {
    gap: 0px;
    padding-top: 0;
  }

  .header {
    margin-left: 8px;
  }

  .title {
    font-size: 1.3rem;
    margin-left: 0;
  }

  .btnContainer button {
    font-size: 14px;
  }
  @media all and (max-height: 800px) {
    .content {
      height: 15vh;
    }

    .sizeUp {
      width: 80vw;
      height: 60vh;
      animation: sizeUp 300ms ease;
    }
  }
}

